# mellifluous

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml
examples/: 01_hello.py  02_repl.py  03_smart_math.py  04_token_stream.py
src/mellifluous/: __init__.py  parse.py  reader.py  spans.py  utterance.py  vocalize.py
src/mellifluous/detect/: __init__.py  builtin.py  pipeline.py  rule_reader.py  types.py
src/mellifluous/extras/: __init__.py  groq_equation_reader.py
src/mellifluous/extras/domains/: __init__.py  _base.py  _doc_reader.py  bayesian_probability.py  exoplanet_astrophysics.py  high_energy_theory.py  linear_algebra.py  quantum_information.py  quantum_mechanics.py
src/mellifluous/synthesize/: __init__.py  _text.py  _timestretch.py  base.py  bridge.py  models.py  sinks.py  streamer.py  types.py  voices.py
src/mellifluous/synthesize/backends/: __init__.py  local_mlx.py  openai.py
tests/: adversarial.md  audit.md  test_detect.py  test_domains.py  test_parse.py  test_reader.py  test_rule_reader.py  test_sentence_splitter.py  test_speed.py  test_vocalize.py
